[package]
name = "pi_ecs_derive_old"
version = "0.1.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "ecs_derive"
repository = "https://github.com/GaiaWorld/pi_ecs_derive_old.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "ecs_derive"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
pi_map = "0.1"
pi_ecs_old = "0.1"